[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/System/PlayerCanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://src/System/ResourceControl.gd" type="Script" id=4]
[ext_resource path="res://src/System/UnitControl.gd" type="Script" id=5]
[ext_resource path="res://src/System/AbilityButtonControl.tscn" type="PackedScene" id=6]

[node name="PlayerCanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="UnitControl" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -214.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UnitControl"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 207.0
alignment = 2

[node name="DescriptionLabel" type="Label" parent="UnitControl/HBoxContainer"]
margin_right = 602.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Test"

[node name="VBoxContainer" type="VBoxContainer" parent="UnitControl/HBoxContainer"]
margin_left = 606.0
margin_right = 670.0
margin_bottom = 200.0

[node name="TextureProgress" type="TextureProgress" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
value = 50.0
texture_progress = ExtResource( 3 )

[node name="NameLabel" type="Label" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 82.0

[node name="HpLabel" type="Label" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 64.0
margin_bottom = 100.0

[node name="AttackDamageLabel" type="Label" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 64.0
margin_bottom = 118.0

[node name="AttackSpeedLabel" type="Label" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 64.0
margin_bottom = 136.0

[node name="MovementSpeedLabel" type="Label" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 64.0
margin_bottom = 154.0

[node name="ActionLabel" type="Label" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 64.0
margin_bottom = 172.0

[node name="PowerLabel" type="Label" parent="UnitControl/HBoxContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 64.0
margin_bottom = 190.0

[node name="GridContainer" type="GridContainer" parent="UnitControl/HBoxContainer"]
margin_left = 674.0
margin_right = 1010.0
margin_bottom = 200.0
columns = 5

[node name="AbilityButtonControl" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_right = 64.0
margin_bottom = 64.0

[node name="AbilityButtonControl2" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0

[node name="AbilityButtonControl3" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0

[node name="AbilityButtonControl4" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0

[node name="AbilityButtonControl5" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0

[node name="AbilityButtonControl6" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0

[node name="AbilityButtonControl7" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0

[node name="AbilityButtonControl8" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 136.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0

[node name="AbilityButtonControl9" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 204.0
margin_top = 68.0
margin_right = 268.0
margin_bottom = 132.0

[node name="AbilityButtonControl10" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 272.0
margin_top = 68.0
margin_right = 336.0
margin_bottom = 132.0

[node name="AbilityButtonControl11" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_top = 136.0
margin_right = 64.0
margin_bottom = 200.0

[node name="AbilityButtonControl12" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 68.0
margin_top = 136.0
margin_right = 132.0
margin_bottom = 200.0

[node name="AbilityButtonControl13" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 136.0
margin_top = 136.0
margin_right = 200.0
margin_bottom = 200.0

[node name="AbilityButtonControl14" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 204.0
margin_top = 136.0
margin_right = 268.0
margin_bottom = 200.0

[node name="AbilityButtonControl15" parent="UnitControl/HBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 272.0
margin_top = 136.0
margin_right = 336.0
margin_bottom = 200.0

[node name="ResourceControl" type="PanelContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 35.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="ResourceControl"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 21.0
alignment = 2

[node name="Label" type="Label" parent="ResourceControl/HBoxContainer"]
margin_left = 882.0
margin_right = 906.0
margin_bottom = 14.0
text = "Ore"

[node name="Label2" type="Label" parent="ResourceControl/HBoxContainer"]
margin_left = 910.0
margin_right = 953.0
margin_bottom = 14.0
text = "Crystal"

[node name="Label3" type="Label" parent="ResourceControl/HBoxContainer"]
margin_left = 957.0
margin_right = 996.0
margin_bottom = 14.0
text = "Power"
